--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <main>
-        <p>
-            <div class="pop">
-                <div class="kids">kid1</div>
-                <div class="kids">kid2</div>
-                <div class="kids">kid3</div>
-                <div class="kids">kid4</div>
-                <div class="kids">kid5</div>
-            </div>
-        </p>
+        <p> pop and kid Parent display: flex; justify-content: space-around;</p>
+        <div class="pop">
+            <div class="kids">kid1</div>
+            <div class="kids">kid2</div>
+            <div class="kids">kid3</div>
+            <div class="kids">kid4</div>
+            <div class="kids">kid5</div>
+        </div>
+
 
 
 
