--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 
 <body>
     <main>
+        <!-- input item -->
+        <div class="fbp10">
+            <div class="container">
+                <form action="" method="post">
+                    <div class="form-row"><label for="name">Name:</label><input type="text" name="" id="name">
+                    </div>
+                    <div class="form-row"><label for="avColor">Favorite Color</label><input type="text" name="" id="favColor">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="center-me">Center me Plz</div>
+        </div>
+
+
+
+
+
+
         <p> pop and kid Parent display: flex; justify-content: space-around;</p>
         <div class="pop">
             <div class="kids">kid1</div>
@@ -45,6 +65,38 @@
             <div class="div4">w/h=150px</div>
             <div class="div5">w=200px</div>
             <div class="div6">w=200px</div>
+        </div>
+
+        <hr class='sep'>
+        <div id="fbp1">
+            <div id="fbc1">
+                <label for="">div1</label>
+                <label for="">label1</label>
+                <label for="">label2</label>
+                <label for="">label3</label>
+            </div>
+            <div id="fbc2">
+                <label for="">label1</label>
+                <label for="">label2</label>
+                <label for="">label3</label>
+                <label for="">label4</label>
+                <label for="">label5</label>
+            </div>
+            <div id="fbc3">
+                <label for="">label1</label>
+                <label for="">label2</label>
+                <label for="">label3</label>
+                <label for="">label4</label>
+                <label for="">label5</label>
+            </div>
+            <div id="fbc4">
+                <label for="">label1</label>
+                <label for="">label2</label>
+                <label for="">label3</label>
+                <label for="">label4</label>
+                <label for="">label5</label>
+            </div>
+            <div id="fbc5">5div</div>
         </div>
     </main>
 </body>
