--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <form action="" method="post">
                     <div class="form-row"><label for="name">Name:</label><input type="text" name="" id="name">
                     </div>
-                    <div class="form-row"><label for="avColor">Favorite Color</label><input type="text" name="" id="favColor">
+                    <div class="form-row"><label for="FavColor">Favorite Color:</label><input type="text" name="" id="favColor">
                     </div>
                 </form>
             </div>
